--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <div class="block-pricing">
                             <div class="table">
                                 <div class="special-img position-relative overflow-hidden">
-                                    <img src="/bep-tu-doi-thong-minh-mijia-mdcld01acm-1.jpg" class="w-100">
+                                    <img src="bep-tu-doi-thong-minh-mijia-mdcld01acm-1.jpg" class="w-100">
                                     <span class="position-absolute bg-primary text-white d-flex align-items-center justify-content-center">sale</span>
                                 </div>
                                 <ul class="list-unstyled">
@@ -311,7 +311,7 @@
                         <div class="block-pricing">
                             <div class="table">
                                 <div class="special-img position-relative overflow-hidden">
-                                    <img src="/DCFBCD0ED8-SP-11426226-1-800x800.jpg" class="w-100">
+                                    <img src="DCFBCD0ED8-SP-11426226-1-800x800.jpg" class="w-100">
                                     <span class="position-absolute bg-primary text-white d-flex align-items-center justify-content-center">sale</span>
                                 </div>
                                 <ul class="list-unstyled">
