--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <p >Home/T-Shirt</p>
+                        <p >Sản phẩm gia dụng</p>
                         <h1>Bếp Từ Đôi Xiaomi Mijia MDCLD01ACM</h1>
                         <h4>$50.00</h4>
                         <select  style="display: block; padding: 10px; margin-top: 20px;">
